syntax = "proto3";
option java_multiple_files = true;
package training.timesheet.gateway;

message CreateEmployeeRequest {
    string name = 1;
}

message CreateEmployeeResponse {
    int64 id = 1;
    string name = 2;
}

service TimesheetService {
    rpc createEmployee(CreateEmployeeRequest) returns (CreateEmployeeResponse);
}
